--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,23 @@
 site_name: CMSE890-602 Project
 
+theme: 
+  name: material
+  color_mode: dark
+  user_color_mode_toggle: true
+  palette:
+    scheme: slate
+    primary: green
+
+plugins:
+- mkdocstrings:
+    handlers:
+      python:
+        paths: [src]
 nav:
   - Home: index.md
   - Muon Selection: 
+    - Selection Class Overview: muonselection.md
+    - Class Initialization: muon_init.md
     - Cluster: cluster.md
     - Test merge condition: merge_cluster.md
     - PCA Fit: pcas.md
@@ -23,11 +38,3 @@ nav:
     - Landau Gaussian Convolution fit: langaufit.md
     - Lifetime Extraction: lifetimefit.md
   - About: about.md
-
-theme: readthedocs
-
-plugins:
-- mkdocstrings:
-    handlers:
-      python:
-        paths: [src]
