--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,7 @@ plugins:
         paths: [src]
 nav:
   - Home: index.md
+  - Install and Run: installation.md
   - Muon Selection: 
     - Selection Class Overview: muonselection.md
     - Class Initialization: muon_init.md
